# aegis-api

./: CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
aegis/: __init__.py  config.py  container.py  main.py
aegis/api/: __init__.py  dependencies.py  middleware.py  rate_limit.py  schemas.py
aegis/api/v1/: __init__.py  orders.py  products.py  users.py
aegis/application/: __init__.py  dto.py  handlers.py  mediator.py
aegis/application/commands/: __init__.py  create_order.py  update_user.py
aegis/application/queries/: __init__.py  get_orders.py  get_user.py
aegis/domain/: __init__.py  entities.py  events.py  exceptions.py  repositories.py  value_objects.py
aegis/infrastructure/: __init__.py  database.py  event_bus.py  event_store.py  repositories.py  tracing.py  uow.py
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py
docs/: api.md  architecture.md  index.md
kubernetes/: deployment.yaml  service.yaml
tests/: conftest.py  test_api.py  test_commands.py  test_domain.py
